--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -14,3 +14,10 @@
   border-radius: 50%;
   background-color: black;
 }
+
+.move {
+  align-content: center;
+  height: 80px;
+  width: 80px;
+  background-color: rgb(124, 164, 223);
+}
